Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/BadHexConstant.out
BadHexConstant.java:12:14: compiler.err.invalid.hex.number
1 error
